commit by anurag

--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
         <!--candidate section ends-->
         <!--chatbot section starts-->
         <button class="chatbot-toggler">
-            <span class="material-symbols-rounded">mode_comment</span>
-            <span class="material-symbols-outlined">close</span>
+            <span class="material-symbols-rounded"><i class="fa-regular fa-comments"></i></span>
+            <span class="material-symbols-outlined"><i class="fa-solid fa-xmark"></i></span>
           </button>
           <div class="chatbot">
             <header>
@@ -311,13 +311,13 @@
             </header>
             <ul class="chatbox">
               <li class="chat incoming">
-                <span class="material-symbols-outlined">smart_toy</span>
+                <span class="fa-solid fa-robot"></span>
                 <p>Hi there 👋<br>How can I help you today?</p>
               </li>
             </ul>
             <div class="chat-input">
               <textarea placeholder="Enter a message..." spellcheck="false" required></textarea>
-              <span id="send-btn" class="material-symbols-rounded">send</span>
+              <span id="send-btn" class="fa fa-paper-plane"></span>
             </div>
           </div>
         <!--chatbot section ends-->
