--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
                         <i class="fa-solid fa-book"></i>
                     </div>
                     <div class="card-content">
-                        <h3>Internet of Things (IoT)</h3>
+                        <h3>Internet of Things</h3>
                         <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
                     </div>
                 </div>
-            </div>
+            </div> 
         </div>
         <!--background section ends-->
         <div class="join-us">
