--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="header">
         <div class="logo">
-            <a href="index.html">TechNewbies</a>
+            <a href="index.html">TechNewbie</a>
             <form action="" method="post" class="search-form">
                 <input type="text" name="search_box" placeholder="search courses..." required>
                 <button type="submit" class="fas fa-search" name="search_box"></button>
