commit by vishwajeet

--- a/courses.html
+++ b/courses.html
@@ -185,25 +185,25 @@
 
             <div class="box">
                 <img src="./images/HTMLthumbnail.png" class="thumb" alt="">
-                <h3 class="title">HTML Tutorial</h3>
+                <h3 class="title">Cloud Infrastructure</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/BootStrapthubnail.png" class="thumb" alt="">
-                <h3 class="title">Bootstrap Tutorial</h3>
+                <h3 class="title">Cloud Security</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/jQuerythubnail.png" class="thumb" alt="">
-                <h3 class="title">jQuery Tutorial</h3>
+                <h3 class="title">Serverless Computing</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/Reactthumbnail.webp" class="thumb" alt="">
-                <h3 class="title">React Tutorial</h3>
+                <h3 class="title">Cloud Architecture</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
         </div>
@@ -215,25 +215,25 @@
 
             <div class="box">
                 <img src="./images/HTMLthumbnail.png" class="thumb" alt="">
-                <h3 class="title">HTML Tutorial</h3>
+                <h3 class="title">Machine Learning</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/BootStrapthubnail.png" class="thumb" alt="">
-                <h3 class="title">Bootstrap Tutorial</h3>
+                <h3 class="title">Deep Learning</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/jQuerythubnail.png" class="thumb" alt="">
-                <h3 class="title">jQuery Tutorial</h3>
+                <h3 class="title">Natural Language Processing (NLP)</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/Reactthumbnail.webp" class="thumb" alt="">
-                <h3 class="title">React Tutorial</h3>
+                <h3 class="title">Computer Vision</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
         </div>
@@ -245,26 +245,26 @@
 
             <div class="box">
                 <img src="./images/HTMLthumbnail.png" class="thumb" alt="">
-                <h3 class="title">HTML Tutorial</h3>
+                <h3 class="title">Version Control Systems</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
 
             <div class="box">
                 <img src="./images/BootStrapthubnail.png" class="thumb" alt="">
-                <h3 class="title">Bootstrap Tutorial</h3>
+                <h3 class="title">Infrastructure As Code - IaC</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/jQuerythubnail.png" class="thumb" alt="">
-                <h3 class="title">jQuery Tutorial</h3>
+                <h3 class="title">Monitoring And Logging</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/Reactthumbnail.webp" class="thumb" alt="">
-                <h3 class="title">React Tutorial</h3>
+                <h3 class="title">Performance Optimzation</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
         </div>
@@ -276,26 +276,26 @@
 
             <div class="box">
                 <img src="./images/HTMLthumbnail.png" class="thumb" alt="">
-                <h3 class="title">HTML Tutorial</h3>
+                <h3 class="title">Communication Protocols</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
 
             <div class="box">
                 <img src="./images/BootStrapthubnail.png" class="thumb" alt="">
-                <h3 class="title">Bootstrap Tutorial</h3>
+                <h3 class="title">Platforms And Services</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/jQuerythubnail.png" class="thumb" alt="">
-                <h3 class="title">jQuery Tutorial</h3>
+                <h3 class="title">IoT Security</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
                 <img src="./images/Reactthumbnail.webp" class="thumb" alt="">
-                <h3 class="title">React Tutorial</h3>
+                <h3 class="title">Data Analytics</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
         </div>
