commit by vishwajeet

--- a/courses.html
+++ b/courses.html
@@ -184,25 +184,25 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="./images/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./courses/CloudInfrastructureThumbnail.jpeg" class="thumb" alt="">
                 <h3 class="title">Cloud Infrastructure</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/BootStrapthubnail.png" class="thumb" alt="">
+                <img src="./courses/CloudSecurityThumbnail.jpeg" class="thumb" alt="">
                 <h3 class="title">Cloud Security</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/jQuerythubnail.png" class="thumb" alt="">
+                <img src="./courses/serverlesscomputingthumbnail.jpg" class="thumb" alt="">
                 <h3 class="title">Serverless Computing</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/Reactthumbnail.webp" class="thumb" alt="">
+                <img src="./courses/cloudcomputingarchitecturethumbnail.jfif" class="thumb" alt="">
                 <h3 class="title">Cloud Architecture</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
@@ -214,25 +214,25 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="./images/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./courses/Machine Learning.jpg" class="thumb" alt="">
                 <h3 class="title">Machine Learning</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/BootStrapthubnail.png" class="thumb" alt="">
+                <img src="./courses/deeplearningthumbnail.png" class="thumb" alt="">
                 <h3 class="title">Deep Learning</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/jQuerythubnail.png" class="thumb" alt="">
+                <img src="./courses/nlpthumbnail.jpg" class="thumb" alt="">
                 <h3 class="title">Natural Language Processing (NLP)</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/Reactthumbnail.webp" class="thumb" alt="">
+                <img src="./courses/ComputerVisionthumbnail.webp" class="thumb" alt="">
                 <h3 class="title">Computer Vision</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
@@ -244,27 +244,27 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="./images/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./courses/versioncontrolsystemthumbnail.png" class="thumb" alt="">
                 <h3 class="title">Version Control Systems</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
 
             <div class="box">
-                <img src="./images/BootStrapthubnail.png" class="thumb" alt="">
+                <img src="./courses/infrastructureascodthumbnail.jpg" class="thumb" alt="">
                 <h3 class="title">Infrastructure As Code - IaC</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/jQuerythubnail.png" class="thumb" alt="">
+                <img src="./courses/monitoringandloggingthumbnail.avif" class="thumb" alt="">
                 <h3 class="title">Monitoring And Logging</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/Reactthumbnail.webp" class="thumb" alt="">
-                <h3 class="title">Performance Optimzation</h3>
+                <img src="./courses/PerformanceMonitoringThumbnail.webp" class="thumb" alt="">
+                <h3 class="title">Performance Monitoring</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
         </div>
@@ -275,26 +275,26 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="./images/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./courses/communicationprotocolsthumbnail.png" class="thumb" alt="">
                 <h3 class="title">Communication Protocols</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
 
             <div class="box">
-                <img src="./images/BootStrapthubnail.png" class="thumb" alt="">
+                <img src="./courses/platformthumbnail.jpg" class="thumb" alt="">
                 <h3 class="title">Platforms And Services</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/jQuerythubnail.png" class="thumb" alt="">
+                <img src="./courses/iosecuritythumbnail.jpg" class="thumb" alt="">
                 <h3 class="title">IoT Security</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
             <div class="box">
-                <img src="./images/Reactthumbnail.webp" class="thumb" alt="">
+                <img src="./courses/datanalyticsthumbnal.png" class="thumb" alt="">
                 <h3 class="title">Data Analytics</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
