commit by vishwajeet

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </div>
             <div class="candidate">
                 <img src="./image/vishwajeet.jpg" alt="">
-                <h4>Vishwajeet Singh</h4>
+                <h4>Vishwjeet Singh</h4>
                 <p>"TechNewbies stands out with its practical approach to learning. The projects are relevant and mimic
                     real-world challenges, preparing you well for the job market. The mentorship program is a huge plus,
                     offering guidance and advice from industry professionals."</p>
