commit by anurag

--- a/myProfile.html
+++ b/myProfile.html
@@ -41,8 +41,31 @@
         </div>
     </div>
     <!--header section ends-->
-        
+    <!--profile section starts-->
+        <div class="side-profile">
+            <div class="personal-box">
+                <img src="./image/anurag.jpg" alt="">
+                <span>Anurag Pardeshi</span>
+                <p>@pardeshianurag22</p>
+                <p>Full Stack Developer</p>
+            </div>
+            <div class="personal-box">
+                <h1>Personal Information</h1>
+                <p>pardeshianurag22@gmail.com</p>
+                <p>+91-8435304050</p>
+                <p>Indore</p>
+            </div>
+            <div class="personal-box">
+                <h1>My Resume</h1>
+                <a href="#">Anurag-Pardesho-resume.pdf</a>
+            </div>
+        </div>
 
+        <div class="main-profile">
+
+        </div>
+
+    <!--profile section starts-->
 </body>
 
 </html>
