commit by vishwajeet

--- a/Courses.html
+++ b/Courses.html
@@ -29,7 +29,7 @@
         </div>
         <div class="nav">
             <a href="courses.html"><span style="color:#ffc701">Explore Courses</span></a>
-            <a href="Live.html"><span>Live</span></a>
+            <a href="live.html"><span>Live</span></a>
             <a href="about.html"><span>About us</span></a>
             <a href="contact.html"><span>Contact us</span></a>
         </div>
