--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                 <button type="submit" class="fas fa-search" name="search_box"></button>
             </form>
         </div>
+
         <div class="nav">
             <a href="courses.html"><span>Explore Courses</span></a>
             <a href="live.html"><span>Live</span></a>
             <a href="about.html"><span>About us</span></a>
             <a href="contact.html"><span>Contact us</span></a>
-        </div>`
-
-        <div class="user-btn"><i class="fa-solid fa-user user-btn-icon"></i>
+            <a href="#">Log out</a>
+            <div class="user-btn"><i class="fa-solid fa-user user-btn-icon"></i></div>
         </div>
 
         <div class="profile">
@@ -59,7 +59,7 @@
 
             <h1>Free e-Learning Courses with Certificates & Diplomas</h1>
             <form action="" class="home-search-form">
-                <input type="text" name="home-search" placeholder="What do you want to learn today?" required>
+                <input type="text" name="home-search-form" placeholder="What do you want to learn today?" required>
                 <button type="submit" class="fa-solid fa-magnifying-glass" name="home-search-btn"></button>
             </form>
 
