--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>TechNewbies</title>
+    <title> TechNewbies</title>
+        <link rel="icon" type="image/png" href="./image/logo.png"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,20 +24,20 @@
 
     <div class="header">
         <div class="logo">
-            <a href="index.html">TechNewbies</a>
+            <a href="index.html">TechNewbie</a>
             <form action="" method="post" class="search-form">
                 <input type="text" name="search_box" placeholder="search courses..." required>
                 <button type="submit" class="fas fa-search" name="search_box"></button>
             </form>
         </div>
+
         <div class="nav">
             <a href="courses.html"><span>Explore Courses</span></a>
             <a href="live.html"><span>Live</span></a>
             <a href="about.html"><span>About us</span></a>
             <a href="contact.html"><span>Contact us</span></a>
-        </div>`
-
-        <div class="user-btn"><i class="fa-solid fa-user user-btn-icon"></i>
+            <a href="#">Log out</a>
+            <div class="user-btn"><i class="fa-solid fa-user user-btn-icon"></i></div>
         </div>
 
         <div class="profile">
