commit by yaghya

--- a/playlist.html
+++ b/playlist.html
@@ -80,13 +80,19 @@
                 </div>
                 <div class="details">
                     <h3>Complete HTML tutorial</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt natus magnam commodi incidunt ipsum
-                        exercitationem?</p>
-                    <div class="date"><i class="fa fa-calendar"></i><span>21-25-2024</span></div>
+                    <p>HTML is the language of the web, used by billions of websites to create the pages you see every
+                        day. Want to learn HTML from scratch and make your web pages? This tutorial is for you!
+                        <br><br>
+                        In this HTML tutorial, you will learn how to use HTML to create and style web pages. You will
+                        start with HTML fundamentals, such as basic HTML tags and their attributes, classes, layout.
+                        Then, you will move on to advanced HTML5 topics, such as HTML forms, media,
+                        APIs, and more. By the end of this tutorial, you will have a solid foundation in HTML.
+                    </p>
+                    <div class="date"><i class="fa fa-calendar"></i><span>21-07-2024</span></div>
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
     <!--playlist section ends-->
     <!--video container section starts-->
     <section class="videos-container">
@@ -137,41 +143,3 @@
 </body>
 
 </html>
-
-
-
-<!--playlist section starts-->
-<div class="playlist">
-
-    <h1 class="heading">PLaylist Details</h1>
-
-    <div class="row">
-        <div class="col">
-            <form action="" method="post" class="save-list">
-                <button type="submit" name="save_list"><i class="far fa-bookmark"></i><span>save
-                        playlist</span></button>
-            </form>
-
-            <div class="thumb">
-                <span>6 videos</span>
-                <img src="./images/HTMLthumbnail.png" alt="">
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="tutor">
-                <img src="./images/teacherpic03.png" alt="">
-                <div>
-                    <h3>Teacher name1</h3>
-                    <span>developer</span>
-                </div>
-            </div>
-            <div class="details">
-                <h3>Complete HTML tutorial</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt natus magnam commodi incidunt ipsum
-                    exercitationem?</p>
-                <div class="date"><i class="fa fa-calendar"></i><span>21-25-2024</span></div>
-            </div>
-        </div>
-    </div>
-</div>
