--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style1.css">
 </head>
 
 <body>
@@ -100,6 +101,7 @@
         </div>
     </div>
 </section>
+<br>
 <!--about section ends-->
 
 </body>
