--- a/courses.html
+++ b/courses.html
@@ -43,7 +43,9 @@
     <!--course section starts-->
     <section class="course">
         <h1 class="heading">Web Development Courses (Front-end Development)</h1>
-        <img src="./courses/Front-end RoadMap.png" alt="">
+        <!-- <img src="./courses/Front-end RoadMap.png" alt=""> -->
+        <a href="./courses/Front-end RoadMap.png" class="inline-btn">Download Complete Web Development (Front-end) Roadmap!</a>
+        <br>
         <div class="box-container">
 
             <div class="box">
@@ -73,7 +75,9 @@
         </div>
 
         <h1 class="heading">Web Development Courses (Backend Development)</h1>
-        <img src="./courses/Back-end RoadMap.jpeg" alt="">
+        <!-- <img src="./courses/Back-end RoadMap.jpeg" alt=""> -->
+        <a href="./courses/Back-end RoadMap.jpeg" class="inline-btn">Download Complete Web Development (back-end) Roadmap!</a>
+
         <div class="box-container">
 
             <div class="box">
@@ -102,7 +106,8 @@
             </div>
         </div>
         <h1 class="heading">Data Science</h1>
-        <img src="./courses/DataScience RoadMap.png" alt="">
+        <!-- <img src="./courses/DataScience RoadMap.png" alt=""> -->
+        <a href="./courses/DataScience RoadMap.png" class="inline-btn">Download Complete Data Science Roadmap!</a>
         <div class="box-container">
 
             <div class="box">
@@ -133,6 +138,7 @@
         </div>
 
         <h1 class="heading">Cybersecurity</h1>
+        <a href="./courses/DataScience RoadMap.png" class="inline-btn">Download Complete Cybersecurity Roadmap!</a>
 
         <div class="box-container">
 
@@ -163,6 +169,7 @@
         </div>
 
         <h1 class="heading">Cloud Computing</h1>
+        <a href="./courses/cloudroadmap.png" class="inline-btn">Download Complete Cloud Computing Roadmap!</a>
 
         <div class="box-container">
 
@@ -192,6 +199,7 @@
         </div>
 
         <h1 class="heading">Artificial Intelligence</h1>
+        <a href="./courses/airoadmap.png" class="inline-btn">Download Complete Artificial Intelligence Roadmap!</a>
 
         <div class="box-container">
 
@@ -221,6 +229,7 @@
         </div>
 
         <h1 class="heading">DevOps</h1>
+        <a href="./courses/devops-roadmap.png" class="inline-btn">Download Complete DevOps Roadmap!</a>
 
         <div class="box-container">
 
@@ -251,6 +260,7 @@
         </div>
 
         <h1 class="heading">Internet of Things (IoT)</h1>
+        <a href="./courses/IoT-Roadmap-image.jpg" class="inline-btn">Download Complete IoT Roadmap!</a>
 
         <div class="box-container">
 
