commit by yaghya

--- a/playlist.html
+++ b/playlist.html
@@ -59,15 +59,15 @@
 
         <div class="row">
             <div class="col">
-                <form action="" method="post" class="save-list">
-                    <button type="submit" name="save_list"><i class="far fa-bookmark"></i><span>save
-                            playlist</span></button>
-                </form>
-
+                
                 <div class="thumb">
                     <span>6 videos</span>
                     <img src="./image/HTMLthumbnail.png" alt="">
                 </div>
+                <form action="" method="post" class="save-list">
+                    <button type="submit" name="save_list"><i class="far fa-bookmark"></i><span>Save
+                            Playlist</span></button>
+                </form>
             </div>
 
             <div class="col">
