commit by anurag

--- a/myProfile.html
+++ b/myProfile.html
@@ -55,7 +55,8 @@
     <!--profile section starts-->
     <div class="profile-section">
         <div class="side-profile">
-            <div class="side-personal-box">
+            <div class="side-personal-box about-box">
+                <h1>Profile</h1>
                 <img src="./image/anurag.jpg" alt=""><br>
                 <span>Anurag Pardeshi</span>
                 <p>@pardeshianurag22</p>
@@ -81,7 +82,7 @@
                 <img src="./image/SQL badge.png" alt="">
                 <img src="./image/SQL badge.png" alt="">
             </div>
-            
+
             <div class="personal-box">
                 <div class="activity-chart">
                     <div class="header1">
@@ -101,34 +102,121 @@
             <div class="personal-box">
                 <h1>My Certifications</h1>
                 <div class="certifi">
-                <div class="certificates">
-                    <img src="./image/c certificate.png" alt="">
-                </div>
-                <div class="certificates">
-                    <img src="./image/c++ certificate.png" alt="">
-                </div>
-                <div class="certificates">
-                    <img src="./image/Prayatan.jpeg" alt="">
-                </div>
+                    <div class="certificates">
+                        <img src="./image/c certificate.png" alt="">
+                    </div>
+                    <div class="certificates">
+                        <img src="./image/c++ certificate.png" alt="">
+                    </div>
+                    <div class="certificates">
+                        <img src="./image/Prayatan.jpeg" alt="">
+                    </div>
                 </div>
             </div>
 
 
             <div class="personal-box">
                 <h1>Work Experience</h1>
+                <div class="box-content work-content">
+                    <div class="inner-content">
+                        <div>
+                            <img src="./image/workexperience.jpeg" alt="">
+                        </div>
+                        <div>
+                            <h4>Full Stack Developer Intern</h4>
+                            <h5>EazyByts Infotech · Internship</h5>
+                            <p>Apr 2024 - Apr 2024 · 1 month</p>
+                            <p>Indore, Madhya Pradesh, India · Remote</p>
+                        </div>
+                    </div>
+                    <p>April-2024 &#x2219; April-2024 &#x2219; 1 month</p>
+                    <p>- Actively participated in code reviews to maintain code quality and ensure adherence to best
+                        practices.<br>
+                        - Collaborated closely with senior developers to design and implement user-friendly interfaces
+                        for web applications.<br>
+                        - Engaged in continuous learning opportunities, including workshops and online courses, to
+                        enhance skills and stay updated with emerging technologies.</p>
+                </div>
             </div>
 
             <div class="personal-box">
                 <h1>Education</h1>
+                <div class="box-content work-content">
+                    <div class="inner-content">
+                        <div>
+                            <img src="./image/sage.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Sage University</h4>
+                            <h5>Masters of Computer applications</h5>
+                            <p>August 2023 - July 2025</p>
+                            <p>Indore, Madhya Pradesh, India · Remote</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="inner-content">
+                        <div>
+                            <img src="./image/sage.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Sage University</h4>
+                            <h5>Masters of Computer applications</h5>
+                            <p>August 2023 - July 2025</p>
+                            <p>Indore, Madhya Pradesh, India · Remote</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="personal-box">
+            <div class="personal-box Links">
                 <h1>Links</h1>
+                <div class="inner-content">
+                    <div>
+                        <img src="./image/linkedin.png" alt="">
+                    </div>
+                    <div>
+                        <h4>linkedin</h4>
+                        <p><a href="www.linkedin.com/in/pardeshianurag22">www.linkedin.com/in/pardeshianurag22</a></p>
+                    </div>
+                </div>
+                <div class="inner-content">
+                    <div>
+                        <img src="./image/Instagram_icon.png" alt="">
+                    </div>
+                    <div>
+                        <h4>Instagram</h4>
+                        <p><a href="www.instagram.com/anuragpardeshii">www.instagram.com/anuragpardeshii</a></p>
+                    </div>
+                </div>
+                <div class="inner-content">
+                    <div>
+                        <img src="./image/leetcode.webp" alt="">
+                    </div>
+                    <div>
+                        <h4>LeetCode</h4>
+                        <p><a href="https://leetcode.com/u/anuragpardeshi">www.leetcode.com/u/anuragpardeshi</a></p>
+                    </div>
+                </div>
             </div>
 
 
             <div class="personal-box">
                 <h1>Skills</h1>
+                <div class="skills">
+                    <div>
+                        <img src="./image/htmlblack.png" alt="">
+                    </div>
+                    <div>
+                        <img src="./image/cssblack.png" alt="">
+                    </div>
+                    <div>
+                        <img src="./image/javaBlack.png" alt="">
+                    </div>
+                    <div>
+                        <img src="./image/c++ logo.png" alt="">
+                    </div>
+                </div>
             </div>
 
         </div>
