commit by anurag

--- a/live.html
+++ b/live.html
@@ -110,14 +110,13 @@
             <div class="box-container">
                 <div class="box">
                     <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
-                    <h3 class="title">Web Development Community</h3>
-                    <a href="#" class="inline-btn">Join Comminity</a>
+                    <h3 class="title">Lecture: Data Mining</h3>
+                    <a href="#" class="inline-btn">Join</a>
                 </div>
                 <div class="box">
                     <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
-                    <h3 class="title">Backend Community</h3>
-                    <span>75 members</span>
-                    <a href="#" class="inline-btn">Join Comminity</a>
+                    <h3 class="title">CSS Minor Project</h3>
+                    <a href="#" class="inline-btn">Join</a>
                 </div>
             </div>
         </div>
